main.css
html{
    background-color: dimgray;
}

body {
    max-width: 800px !important;
    
}
ul.nav-pills {
top: 20px;
position:sticky;
}
div.col-8 div {
height: auto;
}
.carousel-img {
    max-height: 500px;
    max-width: 100%;
    padding-left: 15%;
    padding-right: 15%;
    
}
h2, h5, h4 {
    /* font-family: 'Shadows Into Light', cursive; 
    font-weight: bolder; */

    font-family: 'Yantramanav', sans-serif;
}
#headline {
    font-style: italic;
}
.nav-link {
    /* font-family: 'Shadows Into Light', cursive;
    font-weight: bolder; */
    font-family: 'Yantramanav', sans-serif;
    font-size: 1rem !important;
    color: black; 
}
p {
    font-family: 'Raleway', sans-serif;
}
div {
    font-family: 'Raleway', sans-serif;
    border-radius: 5px;
}
.lvmheadings {
    font-style: italic; 
    font-weight: bolder;
    text-decoration: underline;
}
.navbar {
    padding-top: 0 !important;
    padding-bottom: 0 !important;
    
}
nav {
    opacity: .85;
}
.carousel-inner  {
    padding-top: 5em;
}
.carousel-control-next, .carousel-control-prev {
    top: 5em !important;
}

